--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Fri Dec 11 11:39:35 CST 2009
 eclipse.preferences.version=1
+encoding//config/java.properties=UTF-8
 encoding/<project>=UTF-8
+encoding/build.xml=UTF-8
