doc: remove default pwd & add readme

--- a/config/server.properties
+++ b/config/server.properties
@@ -16,7 +16,7 @@ TradeFrom=127.0.0.1
 Driver=com.mysql.jdbc.Driver
 URL=jdbc:mysql://localhost/l1jdb?useUnicode=true&characterEncoding=big5
 Login=root
-Password=5l4cj04gj4
+Password=
 
 #使用するスレッドプール(推奨=2)
 #GeneralThreadPoolType:
